<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>np</groupId>
  <artifactId>assembly</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>assembly</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <repositories>
	<repository>
	    <id>jitpack.io</id>
	    <url>https://jitpack.io</url>
	</repository>
	<repository>
		<id>clojars.org</id>
		<url>http://clojars.org/repo</url>
	</repository>
  </repositories>

  <dependencies>
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <scope>test</scope>
		</dependency>
	  	<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		</dependency>
		  	<dependency>
		    <groupId>com.joptimizer</groupId>
		    <artifactId>joptimizer</artifactId>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.github.graphstream</groupId>
		    <artifactId>gs-algo</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.github.graphstream</groupId>
		    <artifactId>gs-ui-javafx</artifactId>
		</dependency> 
		<dependency>
		    <groupId>com.github.graphstream</groupId>
		    <artifactId>gs-core</artifactId>
		</dependency>
		<!--<dependency>
		    <groupId>org.graphstream</groupId>
		    <artifactId>gs-ui</artifactId>
		</dependency>-->
		<dependency>
		    <groupId>javax.json</groupId>
		    <artifactId>javax.json-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.github.samtools</groupId>
		    <artifactId>htsjdk</artifactId>
		</dependency>
		<dependency>
		    <groupId>com._0xab</groupId>
		    <artifactId>jhdf5</artifactId>
		</dependency>
	    <dependency>
        	<groupId>com.github.wendykierp</groupId>
        	<artifactId>JTransforms</artifactId>
        	<classifier>with-dependencies</classifier>
    	</dependency>
  </dependencies>
  
   <build>
       <resources>
        <resource>
            <directory>resources/icons</directory>
        </resource>
        <resource>
            <directory>resources/css</directory>
        </resource>
    	</resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                       
						<configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
			                    <filter>
			                        <!--
			                            Exclude files that sign a jar
			                            (one or multiple of the dependencies).
			                            One may not repack a signed jar without
			                            this, or you will get a
			                            SecurityException at program start.
			                        -->
			                        <artifact>*:*</artifact>
			                        <excludes>
			                            <exclude>META-INF/*.SF</exclude>
			                            <exclude>META-INF/*.RSA</exclude>
			                            <exclude>META-INF/*.INF</exclude>
			                        </excludes>
			                    </filter>
			                </filters>    
                        </configuration>                      
                    </execution>
                </executions>              
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <testSourceDirectory>src/test/java</testSourceDirectory>
                    <systemPropertyVariables>
                        <log4j.configuration>log4j.properties</log4j.configuration>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                </configuration>
            </plugin>
            
		    	<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <executions>
		        	<execution>
		            	<id>attach-sources</id>
		                	<goals>
		                    	<goal>jar</goal>
		                    </goals>
		           </execution>
		        </executions>
		  	</plugin>
            
		     <plugin>
		        	<groupId>org.apache.maven.plugins</groupId>
		           	<artifactId>maven-javadoc-plugin</artifactId>
		           	<executions>
		            	<execution>
		                	<id>attach-javadocs</id>
		                    <goals>
		                    	<goal>jar</goal>
		                    </goals>
		                </execution>
		           	</executions>
			</plugin>-->

		</plugins>

    </build>
   <dependencyManagement>
   	<dependencies>
   		<dependency>
   			<groupId>org.apache.commons</groupId>
   			<artifactId>commons-math3</artifactId>
   			<version>3.5</version>
   		</dependency>
		<dependency>
		    <groupId>com.joptimizer</groupId>
		    <artifactId>joptimizer</artifactId>
		    <version>3.4.0</version>
		</dependency>
   		<dependency>
   			<groupId>junit</groupId>
   			<artifactId>junit</artifactId>
   			<version>3.8.1</version>
   		</dependency>
   		<dependency>
   			<groupId>commons-io</groupId>
   			<artifactId>commons-io</artifactId>
   			<version>2.5</version>
   		</dependency>
   		<!-- This version has bugs with connected components
   		<dependency>
   			<groupId>org.graphstream</groupId>
   			<artifactId>gs-algo</artifactId>
   			<version>1.3</version>
   		</dependency>  -->
   		<dependency>
		    <groupId>com.github.graphstream</groupId>
		    <artifactId>gs-algo</artifactId>
		    <version>2.0-alpha</version>
		</dependency>
   		<dependency>
	    	<groupId>com.github.graphstream</groupId>
		    <artifactId>gs-ui-javafx</artifactId>
		    <version>2.0-alpha</version>
		</dependency>
   		<dependency>
   			<groupId>com.github.graphstream</groupId>
   			<artifactId>gs-core</artifactId>
   			<version>2.0-alpha</version>
   		</dependency>
   		<!--<dependency>
   			<groupId>org.graphstream</groupId>
   			<artifactId>gs-ui</artifactId>
   			<version>1.3</version>
   		</dependency> -->
   		<dependency>
   			<groupId>javax.json</groupId>
   			<artifactId>javax.json-api</artifactId>
   			<version>1.0</version>
   		</dependency>
   		<dependency>
   			<groupId>org.slf4j</groupId>
   			<artifactId>slf4j-api</artifactId>
   			<version>1.7.25</version>
   		</dependency>
   		<dependency>
   			<groupId>org.slf4j</groupId>
   			<artifactId>slf4j-simple</artifactId>
   			<version>1.7.25</version>
   		</dependency>
   		<dependency>
   			<groupId>com.google.guava</groupId>
   			<artifactId>guava</artifactId>
   			<version>18.0</version>
   		</dependency>
   		<dependency>
   			<groupId>com.github.samtools</groupId>
   			<artifactId>htsjdk</artifactId>
   			<version>2.10.1</version>
   		</dependency>
		<!-- https://mvnrepository.com/artifact/com._0xab/jhdf5 -->
		<dependency>
		    <groupId>com._0xab</groupId>
		    <artifactId>jhdf5</artifactId>
		    <version>13.06.2</version>
		</dependency>
		    <dependency>
        	<groupId>com.github.wendykierp</groupId>
        	<artifactId>JTransforms</artifactId>
        	<version>3.1</version>
        	<classifier>with-dependencies</classifier>
    	</dependency>
   	</dependencies>
   </dependencyManagement>
</project>
